--- a/project-complete/src/main/res/layout/navigation_activity.xml
+++ b/project-complete/src/main/res/layout/navigation_activity.xml
@@ -7,24 +7,11 @@
     android:orientation="vertical"
     tools:context=".view.navigation.NavigationActivity">
 
-    <!--<androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_500"
-        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />-->
-
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         app:defaultNavHost="true" />
-
-    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav_menu" />-->
 </LinearLayout>
