--- a/project-complete/src/main/res/layout/creatures_list_item.xml
+++ b/project-complete/src/main/res/layout/creatures_list_item.xml
@@ -64,7 +64,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Lagartorbas" />
+                    tools:text="Java" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -88,7 +88,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barrier3"
-                tools:src="@drawable/icon_humor" />
+                tools:src="@drawable/creature_java" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
