step3: implement recycler view

--- a/step03-creatures-list/src/main/res/layout/creatures_list_fragment.xml
+++ b/step03-creatures-list/src/main/res/layout/creatures_list_fragment.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".view.CreaturesListFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CreaturesListFragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText" />
+        tools:listitem="@layout/creatures_list_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
