step4: implement image loading

--- a/step03-creatures-list/src/main/res/layout/creatures_list_item.xml
+++ b/step03-creatures-list/src/main/res/layout/creatures_list_item.xml
@@ -68,8 +68,8 @@
             android:layout_height="200dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/creature_java"
             android:contentDescription="TODO: Content Description"
+            android:src="@drawable/creature_java"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
