--- a/step04-data-binding/src/main/res/layout/creatures_list_item.xml
+++ b/step04-data-binding/src/main/res/layout/creatures_list_item.xml
@@ -29,7 +29,7 @@
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/saira_400"
-                android:text="@{String.valueOf(creature.number)}"
+                android:text="@{@string/creature_number(creature.number)}"
                 android:textColor="#5D414F"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -81,6 +81,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:contentDescription="TODO: Content Description"
+                app:imageUrl="@{creature.imageUrl}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
