--- a/step05-add-creatures/src/main/res/navigation/nav_graph.xml
+++ b/step05-add-creatures/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,34 @@
 
     <fragment
         android:id="@+id/creatures_list_dest"
-        android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.CreaturesListFragment"
+        android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.CreaturesListFragment"
         android:label="creatures_list_fragment"
-        tools:layout="@layout/creatures_list_fragment" />
+        tools:layout="@layout/creatures_list_fragment" >
+        <action
+            android:id="@+id/creature_choose_action"
+            app:destination="@id/creature_choose_dest" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/creature_choose_dest"
+        android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.CreatureChooseFragment"
+        android:label="creature_choose_fragment"
+        tools:layout="@layout/creature_choose_fragment">
+
+        <action
+            android:id="@+id/creature_choose_to_creature_added_action"
+            app:destination="@id/creature_added_dest"
+            app:popUpTo="@id/creatures_list_dest" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/creature_added_dest"
+        android:name="tech.salvatore.livro_android_kotlin_paulo_salvatore.view.creatures.CreatureAddedFragment"
+        android:label="CreaturesAddedFragment"
+        tools:layout="@layout/creature_added_fragment">
+
+        <argument
+            android:name="creatureNumber"
+            app:argType="integer" />
+    </fragment>
 </navigation>
