chore(step05): extract `See creatures in list` text to `strings.xml`

--- a/step05-add-creatures/src/main/res/layout/creature_added_fragment.xml
+++ b/step05-add-creatures/src/main/res/layout/creature_added_fragment.xml
@@ -78,7 +78,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="See creature in list"
+            android:text="@string/see_creature_in_list"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
