--- a/step05-add-creatures/src/main/res/layout/creature_choose_fragment.xml
+++ b/step05-add-creatures/src/main/res/layout/creature_choose_fragment.xml
@@ -65,7 +65,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageButton
-            android:id="@+id/button1"
+            android:id="@+id/btChooseCreature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
