feat(step6): implement silhouette

--- a/step06-creatures-silhouette/src/main/res/layout/creatures_list_item.xml
+++ b/step06-creatures-silhouette/src/main/res/layout/creatures_list_item.xml
@@ -81,6 +81,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:contentDescription="TODO: Content Description"
+                app:enableSilhouette="@{!creature.isKnown}"
                 app:imageUrl="@{creature.imageUrl}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
