feat(step7): update `view` layout, creature image & add action to `nav_graph`

--- a/step07-creatures-view/src/main/res/navigation/nav_graph.xml
+++ b/step07-creatures-view/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,10 @@
         <action
             android:id="@+id/creature_choose_action"
             app:destination="@id/creature_choose_dest" />
+
+        <action
+            android:id="@+id/creature_view_action"
+            app:destination="@id/creature_view_dest" />
     </fragment>
 
     <fragment
